--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,11 @@
+---
 baseurl: https://erasche.github.io/
 disablePathToLower: true
 languageCode: en-us
 title: Eric Rasche
 theme: "purehugo"
 Paginate: 10
+canonifyurls: true
 
 params:
     twitterName: "Eric_Rasche"
