--- a/config.yaml
+++ b/config.yaml
@@ -7,8 +7,11 @@ theme: "purehugo"
 Paginate: 10
 canonifyurls: true
 
+
 params:
     twitterName: "Eric_Rasche"
     githubName: "erasche"
     picture: /assets/pics/me3.png
+    description: "5b ee ac c1° 3f 5c 80 42°"
+
 ...
