--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,4 @@ params:
     twitterName: "Eric_Rasche"
     githubName: "erasche"
     picture: /assets/pics/me3.png
-    description: "5b ee ac c1° 3f 5c 80 42°"
-
-...
+    description: "System Administrator"
