--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Welcome to Jekyll!
 title: 3bf57cec3c37
+author: E. Rasche
 email: hxr@hx42.org
 description: "" # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
