--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: 3bf57cec3c37
 author: E. Rasche
 email: hxr@hx42.org
+gpg: f063d3316e63e7b523fdb9eac527b0fc0af63592
 description: "" # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://erasche.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
