--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Welcome to Jekyll!
 title: 3bf57cec3c37
-author: E. Rasche
+author: Helena Rasche
 email: hxr@hx42.org
 gpg: f063d3316e63e7b523fdb9eac527b0fc0af63592
 description: "" # this means to ignore newlines until "baseurl:"
