--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
-# Welcome to Jekyll!
-title: 3bf57cec3c37
+title: ☕
 author: Helena Rasche
 email: hxr@hx42.org
-gpg: f063d3316e63e7b523fdb9eac527b0fc0af63592
-description: "" # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://erasche.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+description: ""
+baseurl: ""
+url: "https://erasche.github.io/"
 github_username: erasche
 
 # Build settings
