--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ author: Helena Rasche
 email: hxr@hx42.org
 description: ""
 baseurl: ""
-url: "https://erasche.github.io/"
-github_username: erasche
+url: "https://hexylena.github.io/"
+github_username: hexylena
 
 # Build settings
 markdown: kramdown
