--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
-title: 🏖
-author: Helena Rasche
-email: hxr@hx42.org
+title: hexylena
+author: Helena
+email: hexylena@galaxians.rog
 description: ""
 baseurl: ""
-url: "https://hexylena.github.io/"
+url: "https://hexylena.galaxians.org/"
 github_username: hexylena
 
 # Build settings
 markdown: kramdown
-theme: minima
 plugins:
   - jekyll-feed
