--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -42,7 +42,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v2
       - name: Dep
-        run: sudo apt install pandoc
+        run: sudo apt install -y pandoc
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
